Hopefully fix bug 165051.  It seems to be quite elusive, so I can't check whether it will for certain.

Clears the focus on the Corona before ~QGraphicsView runs.  See comment for more info.

BUG: 165051


svn path=/trunk/KDE/kdebase/workspace/libs/plasma/; revision=851511